--- a/css/index.css
+++ b/css/index.css
@@ -101,9 +101,11 @@ textarea {
 html {
     font-family: sans-serif;
 }
-
+#pic{
+    background-image: url(/img/stephaniecuetowebsite.png);
+}
 #about {
-    background-image: url('/img/stephaniecuetowebsite.png');
+    /* background-image: url('/img/stephaniecuetowebsite.png'); */
     background-color: #ffffff;
     background-size: auto 75%;
     background-repeat: no-repeat;
