--- a/css/index.css
+++ b/css/index.css
@@ -113,7 +113,7 @@ html {
     background-size: auto 75%;
     background-repeat: no-repeat;
     background-position: 10% 3em;
-    height: 100vh;
+    /* height: 100vh; */
     padding: 10%;
     width: 40%;
     display: flex;
