--- a/css/index.css
+++ b/css/index.css
@@ -108,7 +108,7 @@ html {
 }
 
 #pic {
-    background-image: url('/img/stephaniecuetowebsite.png');
+    background-image: url('./stephaniecuetowebsite.png');
     background-color: #ffffff;
     background-size: auto 95%;
     background-repeat: no-repeat;
