--- a/css/index.css
+++ b/css/index.css
@@ -108,7 +108,8 @@ html {
 }
 
 #pic {
-    background-image: url('./stephaniecuetowebsite.png');
+    /* background-image: url('/img/stephaniecuetowebsite.png'); */
+    background-image: url('/Users/stephaniecueto/Documents/github-projects/stephaniecueto-website/img/stephaniecuetowebsite.png');
     background-color: #ffffff;
     background-size: auto 95%;
     background-repeat: no-repeat;
